[package]
name = "fractal"
version = "0.1.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2018"

[dependencies]
# sdl2="0.34.0"
itertools = "0.9.0"
num-complex = "0.2.4"
rayon = "1.3.0"
toml = "0.5"
num_cpus = "1.13.0"
serde = { version = "1.0.111", features = ["derive"] }
rand = "0.7"
image = "0.23.4"
minifb = "0.16.0"


[build-dependencies]
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.51"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
